[gd_scene load_steps=5 format=3 uid="uid://bc8arfi4le746"]

[ext_resource type="Script" uid="uid://c30jjlroha8h3" path="res://modules/menu/popup_menu.gd" id="1_5oejy"]
[ext_resource type="PackedScene" uid="uid://1m18lfvfkax2" path="res://modules/settings/settings.tscn" id="2_84h8u"]
[ext_resource type="PackedScene" uid="uid://khnsbhc4bqj8" path="res://modules/menu/main_menu.tscn" id="2_xjd7q"]
[ext_resource type="StyleBox" uid="uid://btqow8w430ddr" path="res://modules/settings/off_white_styleboxflat.tres" id="3_36e67"]

[node name="GamePopupMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5oejy")
main_menu_scene = ExtResource("2_xjd7q")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.309804)
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -340.0
offset_right = 274.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_36e67")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit to Main Menu"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings & Controls"

[node name="Extras" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Gallery & Credits"

[node name="QuitGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="Settings" parent="." instance=ExtResource("2_84h8u")]
visible = false

[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
